# code-llm-evaluator

./: .gitignore  CITATION.bib  HISTORY.rst  LICENSE  README.rst  pyproject.toml
docs/source/: api.rst  argument.rst  conf.py  index.rst  usage.rst
docs/source/_autosummary/: code_eval.evaluator.rst  code_eval.rst  code_eval.tasks.base.rst  code_eval.tasks.humaneval.rst  code_eval.tasks.mbpp.rst  code_eval.tasks.rst
script/: run_hf.sh  test_config.yaml
src/code-eval/: evaluator.py
src/code_eval/: __main__.py  evaluator.py
src/code_eval/metrics/: code_eval.py
src/code_eval/tasks/: __init__.py  base.py  humaneval.py  mbpp.py
tests/: test_cli.py  test_evaluator.py  test_task.py
tests/script/: run.sh
